code added to styles.css and index.js

--- a/index.html
+++ b/index.html
@@ -14,15 +14,16 @@
     <h1 class="level-title">Press any Key to Start</h1>
 
     <!-- Buttons Start -->
+    <!-- id's are required for a jQuery in index.js -->
     <div class="container">
       <!-- Top Row -->
       <div class="row">
         <!-- Green Button -->
-        <div class="btn green" type="button">
+        <div id="green" class="btn green" type="button">
 
         </div>
         <!-- Red Button -->
-        <div class="btn red" type="button">
+        <div id="red" class="btn red" type="button">
 
         </div>
     </div>
@@ -30,11 +31,11 @@
       <!-- Bottom Row -->
       <div class="row">
         <!-- Yellow Button -->
-        <div class="btn yellow" type="button">
+        <div id="yellow" class="btn yellow" type="button">
 
         </div>
         <!-- Blue Button -->
-        <div class="btn blue" type="button">
+        <div id="blue" class="btn blue" type="button">
 
         </div>
       </div>
