cleaned up code

--- a/index.html
+++ b/index.html
@@ -14,31 +14,25 @@
     <h1 class="level-title">Press any Key to Start</h1>
 
     <!-- Buttons Start -->
-    <!-- id's are required for a jQuery in index.js -->
+    <!-- id's are required in index.js -->
     <div class="container">
+      
       <!-- Top Row -->
       <div class="row">
         <!-- Green Button -->
-        <div id="green" class="btn green" type="button">
-
-        </div>
+        <div id="green" class="btn green" type="button"></div>
         <!-- Red Button -->
-        <div id="red" class="btn red" type="button">
-
-        </div>
-    </div>
+        <div id="red" class="btn red" type="button"></div>
+      </div>
 
       <!-- Bottom Row -->
       <div class="row">
         <!-- Yellow Button -->
-        <div id="yellow" class="btn yellow" type="button">
-
-        </div>
+        <div id="yellow" class="btn yellow" type="button"></div>
         <!-- Blue Button -->
-        <div id="blue" class="btn blue" type="button">
-
-        </div>
+        <div id="blue" class="btn blue" type="button"></div>
       </div>
+
     <!-- Buttons End -->
     </div>
 
