created assets folder to consolidate other folders

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet">
     <!-- CSS Stylesheet -->
-    <link rel="stylesheet" href="css\styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
   </head>
 
   <body>
@@ -16,7 +16,7 @@
     <!-- Buttons Start -->
     <!-- id's are required in index.js -->
     <div class="container">
-      
+
       <!-- Top Row -->
       <div class="row">
         <!-- Green Button -->
@@ -37,6 +37,6 @@
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="js/index.js"></script>
+    <script src="assets/js/index.js"></script>
   </body>
 </html>
