--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
     <!-- Buttons End -->
     </div>
 
+    <!-- jQuery Google CDN -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <!-- Javascript -->
     <script src="assets/js/index.js"></script>
   </body>
 </html>
